--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<style>
-	{# body{
-		position: relative;
+	{# .watermark-item{
+		opacity: 0!important;
 	} #}
 	</style>
 </head>
